# madr-fastapi

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml
migrations/: env.py
migrations/versions/: 504fb9f99c08_create_books_table.py  5f80c5793a3a_create_users_table.py  7e20a64d10d4_create_authors_and_book_tables.py  cfdedd602bcc_create_authors_table_with_relationships_.py
src/: app.py  database.py  models.py  schemas.py  security.py  settings.py
src/routers/: auth.py  author.py  books.py  users.py
src/schemas/: authors.py  books.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_author.py  test_book.py  test_security.py  test_users.py
